1. Chat list color change

--- a/videosdk/src/main/res/drawable/rectangle_chat_list.xml
+++ b/videosdk/src/main/res/drawable/rectangle_chat_list.xml
@@ -1,8 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="#CCCCCC"
-        android:centerColor="#CCCCCC"
-        android:startColor="#CCCCCC"
+        android:endColor="#CC252965"
+        android:centerColor="#CC252965"
+        android:startColor="#CC252965"
         android:angle="270" />
     <corners
         android:radius="20dp" />
