--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -54,8 +54,8 @@
         android:layout_height="@dimen/height_livestream_bar"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp">
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview_livestream"
@@ -63,7 +63,8 @@
             android:layout_height="@dimen/height_livestream_bar"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/livestream_add_friend_viewholder"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            app:stackFromEnd="true"/>
 
     </FrameLayout>
 
