--- a/videosdk/src/main/res/layout/livestream_my_viewholder.xml
+++ b/videosdk/src/main/res/layout/livestream_my_viewholder.xml
@@ -3,14 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/livestream_item"
+    android:layout_height="@dimen/height_livestream_bar"
+    android:layout_width="@dimen/width_livestream_bar_item"
+    android:background="@drawable/livestream_view"
     android:id="@+id/relativeLayout">
 
     <com.twilio.video.VideoView
         android:id="@+id/livestream_my_viewholder_videoview"
         app:overlaySurface="true"
         android:visibility="visible"
-        style="@style/livestream_item"
+        android:layout_height="@dimen/height_livestream_bar"
+        android:layout_width="@dimen/width_livestream_bar_item"
+        android:background="@drawable/livestream_view"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,7 +23,7 @@
     <TextView
         android:id="@+id/livestream_viewholder_name"
         tools:text="Name"
-        android:background="#70578300"
+        android:background="@android:color/transparent"
         android:textColor="@color/white"
         android:layout_width="match_parent"
         android:gravity="center"
@@ -29,37 +33,82 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tap below to go live!"
+        android:textColor="#00e2ff"
+        app:layout_constraintBottom_toTopOf="@+id/livestream_holder_voice"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="@+id/livestream_holder_voice"
+        app:layout_constraintRight_toRightOf="@+id/livestream_holder_video"
+        android:layout_marginBottom="15dp"/>
+
+    <ImageView
         android:id="@+id/livestream_holder_voice"
         android:text="VOICE"
         android:gravity="center"
-        android:background="#70000483"
+        android:background="@drawable/livestream_image_bcrnd"
         android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="60dp"
-        android:layout_height="60dp"/>
+        android:src="@drawable/minmic"
+        app:layout_constraintBottom_toTopOf="@+id/livestream_viewholder_name"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:padding="5dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="2dp"/>
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Voice"
+        android:textColor="#00e2ff"
+        app:layout_constraintTop_toBottomOf="@+id/livestream_holder_voice"
+        android:textSize="8sp"
+        app:layout_constraintLeft_toLeftOf="@+id/livestream_holder_voice"
+        app:layout_constraintRight_toRightOf="@+id/livestream_holder_voice"
+        android:layout_marginTop="2dp"/>
+
+    <ImageView
         android:id="@+id/livestream_holder_video"
         android:text="VIDEO"
         android:textColor="@color/white"
         android:gravity="center"
-        android:background="#70000483"
-        app:layout_constraintTop_toBottomOf="@+id/livestream_holder_voice"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="60dp"
-        android:layout_height="60dp"/>
-
+        android:background="@drawable/livestream_image_bcrnd"
+        android:src="@drawable/cam"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:padding="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/livestream_viewholder_name"
+        app:layout_constraintRight_toLeftOf="parent"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="2dp"/>
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Video"
+        android:textColor="#00e2ff"
+        app:layout_constraintTop_toBottomOf="@+id/livestream_holder_video"
+        android:textSize="8sp"
+        app:layout_constraintLeft_toLeftOf="@+id/livestream_holder_video"
+        app:layout_constraintRight_toRightOf="@+id/livestream_holder_video"
+        android:layout_marginTop="2dp"/>
+
+
+    <ImageView
         android:id="@+id/livestream_holder_swap"
         android:text="SWAP"
         android:textColor="@color/white"
         android:gravity="center"
-        android:background="#70000483"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/livestream_image_bcrnd"
+        app:layout_constraintBottom_toTopOf="@+id/livestream_viewholder_name"
         app:layout_constraintLeft_toRightOf="@+id/livestream_holder_voice"
-        android:layout_width="60dp"
-        android:layout_height="60dp"/>
+        app:layout_constraintRight_toLeftOf="@+id/livestream_holder_video"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/min"
+        android:padding="5dp"/>
 
 </android.support.constraint.ConstraintLayout>
