--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -30,7 +30,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview_stage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:tag="video"/>
 
     </FrameLayout>
 
@@ -64,7 +65,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/livestream_add_friend_viewholder"
             android:layout_gravity="center"
-            app:stackFromEnd="true"/>
+            app:stackFromEnd="true"
+            android:tag="stream"/>
 
     </FrameLayout>
 
