--- a/StageVideoView/src/main/res/drawable/exomedia_default_controls_interactive_background.xml
+++ b/StageVideoView/src/main/res/drawable/exomedia_default_controls_interactive_background.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
 
-    <solid android:color="#47000000" />
+    <solid android:color="@android:color/transparent" />
 </shape>
