--- a/videosdk/src/main/res/drawable/livestream_view1.xml
+++ b/videosdk/src/main/res/drawable/livestream_view1.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:endColor="@android:color/black"
-        android:centerColor="@android:color/black"
-        android:startColor="@android:color/black"
-        android:angle="270" />
+
+    <solid android:color="@android:color/transparent" />
+    <stroke android:width="5dp" android:color="@android:color/black"
+        />
+
     <corners
         android:radius="10dp" />
     <padding
