--- a/videosdk/src/main/res/layout/livestream_my_viewholder.xml
+++ b/videosdk/src/main/res/layout/livestream_my_viewholder.xml
@@ -108,7 +108,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/min"
+        android:src="@drawable/swap"
         android:padding="5dp"/>
 
 </android.support.constraint.ConstraintLayout>
