--- a/videosdk/src/main/res/layout/livestream_participant_viewholder.xml
+++ b/videosdk/src/main/res/layout/livestream_participant_viewholder.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -10,18 +10,25 @@
 
     <com.twilio.video.VideoView
         android:id="@+id/livestream_my_viewholder_videoview"
-        android:layout_centerInParent="true"
-        android:background="@drawable/participant_view1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/livestream_view1"
         app:overlaySurface="true"
         android:visibility="visible"
         android:layout_height="@dimen/height_livestream_bar"
         android:layout_width="@dimen/width_livestream_bar_item"/>
 
     <ImageView
-        android:src="@drawable/avatarplaceholder"
-        android:layout_height="40dp"
+        android:id="@+id/imageView"
         android:layout_width="40dp"
-        android:layout_centerInParent="true"/>
+        android:layout_height="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/avatarplaceholder" />
 
     <TextView
         android:id="@+id/livestream_viewholder_name"
@@ -31,8 +38,8 @@
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
